Kubernetes/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-id
spec:
  selector:
    app: project-id
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
